# CryFox

./: .gitignore  .supabase.config.template  CMakeLists.txt  CMakePresets.json  CODE_OF_CONDUCT.md  CONTRIBUTING.md  ISSUES.md  LICENSE  README.md  SECURITY.md  vcpkg.json
.github/workflows/: libjs-test262.yml  lint-code.yml
AK/: Assertions.cpp  Assertions.h  Atomic.h  AtomicRefCounted.h  Badge.h  Base64.cpp  Base64.h  BinarySearch.h  Bitmap.h  BitmapView.h  ByteBuffer.h  ByteString.cpp  ByteString.h  ByteStringImpl.cpp  ByteStringImpl.h  CMakeLists.txt  Checked.h  CircularQueue.h  CopyOnWrite.h  Demangle.h  DistinctNumeric.h  DoublyLinkedList.h  Enumerate.h  Error.h  FixedArray.h  FixedBitmap.h  FloatingPoint.h  Forward.h  Function.h  HashFunctions.h  HashMap.h  HashTable.h  Hex.cpp  Hex.h  IDAllocator.h  IPv4Address.h  IntrusiveList.h  IterationDecision.h  Iterator.h  JsonArray.cpp  (+64 more)
Documentation/: AddNewIDLFile.md  AdvancedBuildInstructions.md  BrowsingContextsAndNavigables.md  BuildInstructionsCryFox.md  BuildProfilingInstructions.md  CSSProperties.md  CodingStyle.md  DevTools.md  FAQ.md  GettingStartedContributing.md  LibWebFromLoadingToPainting.md  Patterns.md  Porting.md  ProcessArchitecture.md  README.md  SmartPointers.md  StringFormatting.md  Testing.md  Troubleshooting.md
Documentation/EditorConfiguration/: AndroidStudioConfiguration.md  CLionConfiguration.md  EmacsConfiguration.md  HelixConfiguration.md  NvimConfiguration.md  QtCreatorConfiguration.md  VSCodeConfiguration.md  VimConfiguration.md
Documentation/HumanInterfaceGuidelines/: Text.md
Libraries/: CMakeLists.txt
Libraries/LibAuth/: CMakeLists.txt  ConfigLoader.cpp  ConfigLoader.h  Forward.h  LocalAuthManager.cpp  LocalAuthManager.h  SupabaseClient.cpp  SupabaseClient.h
Libraries/LibBrowser/: CMakeLists.txt  HistoryManager.cpp  HistoryManager.h  PasswordVault.cpp  PasswordVault.h
Libraries/LibCompress/: CMakeLists.txt  Forward.h  Lzw.h
Libraries/LibCore/: AnonymousBuffer.cpp  AnonymousBuffer.h  AnonymousBufferWindows.cpp  CMakeLists.txt  ConfigFile.cpp  ConfigFile.h  DirIterator.cpp  DirIterator.h  ElapsedTimer.cpp  ElapsedTimer.h  Environment.cpp  Event.h  EventLoop.cpp  EventLoop.h  EventLoopExecutor.swift  EventLoopImplementation.cpp  EventLoopImplementation.h  EventLoopImplementationUnix.cpp  EventLoopImplementationUnix.h  EventLoopImplementationWindows.cpp  EventLoopImplementationWindows.h  EventReceiver.cpp  EventReceiver.h  EventSwift.h  EventSwift.mm  File.cpp  Forward.h  LocalServer.cpp  LocalServer.h  MappedFile.cpp  MappedFile.h  MimeData.cpp  MimeData.h  NetworkResponse.h  Notifier.cpp  Notifier.h  Process.cpp  Process.h  ProcessWindows.cpp  ReportTime.cpp  (+18 more)
Libraries/LibCrypto/: CMakeLists.txt  SecureRandom.cpp  SecureRandom.h
Libraries/LibDNS/: CMakeLists.txt
Libraries/LibDatabase/: CMakeLists.txt  Database.cpp  Database.h  Forward.h
Libraries/LibDevTools/: Actor.cpp  Actor.h  CMakeLists.txt  Connection.cpp  Connection.h  DevToolsDelegate.h  DevToolsServer.cpp  DevToolsServer.h  Forward.h  Node.h
Libraries/LibDiff/: CMakeLists.txt
Libraries/LibFileSystem/: CMakeLists.txt  FileSystem.cpp  FileSystem.h
Libraries/LibGC/: CMakeLists.txt  (+30 more)
Meta/: WPT.sh  check-debug-flags.sh  check-flatpak.py  configure-clangd.sh  cryfox.py  find_compiler.py  host_platform.py  refresh-cryfox-qtcreator.sh  shell_include.sh  utils.py  wpt-bisect-helper.sh
Meta/gn/secondary/CryFox/WebContent/: BUILD.gn
Meta/gn/secondary/CryFox/WebDriver/: BUILD.gn
Toolchain/: BuildVcpkg.py
UI/: CMakeLists.txt  Info.plist
UI/Android/: BuildLagomTools.sh  CMakeLists.txt  build.gradle.kts  settings.gradle.kts
UI/Android/src/androidTest/java/org/serenityos/cryfox/: SmokeTest.kt
UI/Android/src/main/: AndroidManifest.xml
UI/Android/src/main/cpp/: ALooperEventLoopImplementation.cpp  ALooperEventLoopImplementation.h  CryFoxActivity.cpp  CryFoxServiceBaseJNI.cpp  ImageDecoderService.cpp  JNIHelpers.cpp  JNIHelpers.h  RequestServerService.cpp  TimerExecutorService.cpp  WebContentService.cpp  WebContentServiceJNI.cpp  WebViewImplementationNative.cpp  WebViewImplementationNative.h  WebViewImplementationNativeJNI.cpp
UI/Android/src/main/java/org/serenityos/cryfox/: CryFoxActivity.kt  CryFoxServiceBase.kt  CryFoxServiceConnection.kt  ImageDecoderService.kt  RequestServerService.kt  TimerExecutorService.kt  TransferAssets.java  WebContentService.kt  WebView.kt  WebViewImplementation.kt
UI/Android/src/main/res/layout/: activity_main.xml
UI/Android/src/main/res/values/: strings.xml  themes.xml
UI/Android/src/main/res/values-night/: themes.xml
UI/AppKit/: CMakeLists.txt  main.mm  module.modulemap
UI/AppKit/Application/: Application.h  Application.mm  ApplicationDelegate.h  ApplicationDelegate.mm  EventLoopImplementationMacOS.h  EventLoopImplementationMacOS.mm
UI/AppKit/Interface/: Autocomplete.h  Autocomplete.mm  CryFoxWebView.h  CryFoxWebView.mm  CryFoxWebViewBridge.cpp  CryFoxWebViewBridge.h  CryFoxWebViewWindow.h  CryFoxWebViewWindow.mm  Event.h  Event.mm  InfoBar.h  InfoBar.mm  Menu.h  Menu.mm  Palette.h  Palette.mm  SearchPanel.mm  Tab.h  Tab.mm  TabController.mm
UI/AppKit/Utilities/: Conversions.h  Conversions.mm
UI/Qt/: Application.cpp  Application.h  AuthDialog.cpp  AuthDialog.h  Autocomplete.cpp  Autocomplete.h  BrowserWindow.cpp  BrowserWindow.h  CMakeLists.txt  EventLoopImplementationQt.cpp  EventLoopImplementationQt.h  EventLoopImplementationQtEventTarget.cpp  EventLoopImplementationQtEventTarget.h  FindInPageWidget.cpp  FindInPageWidget.h  Icon.cpp  Icon.h  LocalAuthDialog.cpp  LocalAuthDialog.h  LocationEdit.cpp  LocationEdit.h  Menu.cpp  Menu.h  ModernStyle.h  ProfileButton.cpp  ProfileButton.h  ProfilePanel.cpp  ProfilePanel.h  Settings.cpp  Settings.h  StringUtils.cpp  StringUtils.h  TVGIconEngine.cpp  TVGIconEngine.h  Tab.cpp  Tab.h  TabBar.cpp  TabBar.h  WebContentView.cpp  WebContentView.h  (+2 more)
UI/cmake/: AndroidExtras.cmake  CryFoxInstallConfig.cmake  EnableLagom.cmake  InstallRules.cmake  ResourceFiles.cmake
Utilities/: CMakeLists.txt  dns.cpp  image.cpp  js.cpp  wasm.cpp  xml.cpp
(+2202 files in other folders)
