import("//CryFox/link_qt.gni")

executable("WebDriver") {
  configs += [ "//CryFox:cryfox_config" ]
  include_dirs = [
    "//Userland/Services",
    "//CryFox",
  ]
  data_deps = [
    "//CryFox:headless-browser",
    "//CryFox:cryfox_executable",
  ]
  deps = [
    "//AK",
    "//Userland/Libraries/LibCore",
    "//Userland/Libraries/LibFileSystem",
    "//Userland/Libraries/LibGfx",
    "//Userland/Libraries/LibIPC",
    "//Userland/Libraries/LibJS",
    "//Userland/Libraries/LibMain",
    "//Userland/Libraries/LibURL",
    "//Userland/Libraries/LibWeb",
    "//Userland/Libraries/LibWebSocket",
    "//Userland/Libraries/LibWebView:WebDriverClientEndpoint",
    "//Userland/Libraries/LibWebView:WebDriverServerEndpoint",
  ]
  sources = [
    "//CryFox/Utilities.cpp",
    "//Userland/Services/WebDriver/Client.cpp",
    "//Userland/Services/WebDriver/Session.cpp",
    "//Userland/Services/WebDriver/WebContentConnection.cpp",
    "main.cpp",
  ]
}
